feat: remove is300h
